Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28138

MariaDB Assertion Failed in mtr_buf_t::has_space

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.7(EOL), 10.8(EOL)
    • 10.7.4, 10.8.3
    • Linux jie-2 5.4.143-1-pve #1 SMP PVE 5.4.143-1 (Tue, 28 Sep 2021 09:10:37 +0200) x86_64 x86_64 x86_64 GNU/Linux

    Description

      PoC:

      CREATE TABLE a (
        keyc SERIAL, b CHAR(255) NOT NULL DEFAULT '', c BOOLEAN DEFAULT false,
        sqlsim0 LINESTRING NOT NULL DEFAULT ST_linefromtext('linestring(448 -689)'),
        INDEX(b,c), SPATIAL INDEX `a`(sqlsim0)
      ) ENGINE=InnoDB;
      SET unique_checks=0;
      SET foreign_key_checks=0;
      INSERT INTO a (keyc) VALUES(0),(1),(2),(3),(4),(5),(6),(7),(8),(9);
      

      report:

      Thread pointer: 0x62b00015e218
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7f20978f3680 thread_stack 0x5fc00
      ??:0(__interceptor_backtrace)[0x7cbadb]
      mysys/stacktrace.c:212(my_print_stacktrace)[0x2a86d37]
      sql/signal_handler.cc:0(handle_fatal_signal)[0x15af5d9]
      sigaction.c:0(__restore_rt)[0x7f20bdea23c0]
      ??:0(gsignal)[0x7f20bdad003b]
      ??:0(abort)[0x7f20bdaaf859]
      ut/ut0dbg.cc:40(ut_dbg_assertion_failed(char const*, char const*, unsigned int))[0x25a393e]
      include/dyn0buf.h:436(mtr_buf_t::has_space(unsigned long))[0x2405186]
      row/row0ins.cc:3331(row_ins_sec_index_entry(dict_index_t*, dtuple_t*, que_thr_t*, bool))[0x2407669]
      row/row0ins.cc:3704(row_ins(ins_node_t*, que_thr_t*))[0x2409c07]
      :0(row_insert_for_mysql(unsigned char const*, row_prebuilt_t*, ins_mode_t))[0x24470e3]
      handler/ha_innodb.cc:7800(ha_innobase::write_row(unsigned char const*))[0x2169c58]
      sql/handler.cc:7522(handler::ha_write_row(unsigned char const*))[0x15ecac0]
      sql/sql_insert.cc:2156(write_record(THD*, TABLE*, st_copy_info*, select_result*))[0xb72ac3]
      sql/sql_insert.cc:1128(mysql_insert(THD*, TABLE_LIST*, List<Item>&, List<List<Item> >&, List<Item>&, List<Item>&, enum_duplicates, bool, select_result*))[0xb6933b]
      sql/sql_parse.cc:4562(mysql_execute_command(THD*, bool))[0xc68511]
      sql/sql_class.h:2734(THD::enter_stage(PSI_stage_info_v1 const*, char const*, char const*, unsigned int))[0xc4a67f]
      sql/sql_parse.cc:1894(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool))[0xc41baa]
      sql/sql_parse.cc:1404(do_command(THD*, bool))[0xc4b74c]
      sql/sql_connect.cc:1418(do_handle_one_connection(CONNECT*, bool))[0x111f9f3]
      sql/sql_connect.cc:0(handle_one_connection)[0x111f249]
      perfschema/pfs.cc:2203(pfs_spawn_thread)[0x1f3f9de]
      nptl/pthread_create.c:478(start_thread)[0x7f20bde96609]
      ??:0(clone)[0x7f20bdbac163]
       
      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x629000087238): INSERT INTO a (keyc) VALUES(0),(1),(2),(3),(4),(5),(6),(7),(8),(9)
      

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              fuboat Jingzhou Fu
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 1.25h
                  1d 1.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.